--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URL=mongodb+srv://fatukunda:<password>@cluster0-e1zyx.mongodb.net/test?retryWrites=true&w=majority
-JWT_KEY=WinterIsComingGOT2019
+MONGODB_URL=mongodb+srv://wickbushong:<password>@cluster0.imtnk.mongodb.net/<dbname>?retryWrites=true&w=majority
+JWT_KEY=nunya
 PORT=3000
