--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URL=mongodb+srv://wickbushong:<password>@cluster0.imtnk.mongodb.net/<dbname>?retryWrites=true&w=majority
-JWT_KEY=nunya
+MONGODB_URL=mongodb+srv://wickbushong:<passwordboi>@cluster0.imtnk.mongodb.net/<dbname>?retryWrites=true&w=majority
+JWT_KEY=nunyabih
 PORT=3000
